[gd_scene load_steps=2 format=2]

[ext_resource path="res://escenas/minijuego/memorama/principal.gd" type="Script" id=1]

[node name="principal" type="Node2D"]
script = ExtResource( 1 )

[node name="btn_jugar" type="Button" parent="."]
anchor_left = 0.521
anchor_top = 0.515
anchor_right = 0.521
anchor_bottom = 0.515
margin_left = 857.0
margin_top = 559.0
margin_right = 1155.0
margin_bottom = 633.0
text = "Jugar"

[node name="cantidad" type="HSlider" parent="."]
visible = false
anchor_left = 0.513
anchor_top = 0.592
anchor_right = 0.513
anchor_bottom = 0.592
margin_left = 752.0
margin_top = 667.0
margin_right = 1251.0
margin_bottom = 683.0
min_value = 2.0
max_value = 10.0
value = 10.0

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 1281.0
margin_top = 670.0
margin_right = 1321.0
margin_bottom = 684.0
text = "10"

[node name="tiempo" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="btn_jugar" to="." method="_on_btn_jugar_pressed"]
[connection signal="value_changed" from="cantidad" to="." method="_on_cantidad_value_changed"]
